--- a/index.html
+++ b/index.html
@@ -1,27 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Kyle's Test Page</title>
-    <link href="style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    rel="stylesheet">
-  </head>
 
-  <body>
-    <div class="submit-block">
-        <p class="title">Input 1</p>
-        <input value="" type="text" id="input1" placeholder="Enter first name" required>
+<head>
+  <title>Mini exercises</title>
+  <link href="style.css" rel="stylesheet">
+</head>
 
-        <p class="title">Input 2</p>
-        <input class="paragraph" value="" type="text" id="input2" placeholder="Enter review..." required>
+<body>
+  <div class="submit-block">
+    <p class="title">Input 1</p>
+    <input value="" type="text" id="input1" placeholder="Enter first name" required>
 
-        <button id="submit-button">Submit</button>
-    </div>
+    <p class="title">Input 2</p>
+    <input class="paragraph" value="" type="text" id="input2" placeholder="Enter review..." required>
 
-    <script src="random.js"></script>
-  
+    <button id="submit-button">Submit</button>
+  </div>
+
+  <script src="random.js"></script>
+
 </body>
+
 </html>
