added user inputs

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 
 <body>
   <div class="submit-block">
-    <p class="title">Input 1</p>
-    <input value="" type="text" id="input1" placeholder="Enter first name" required>
+    <p class="title">Low number</p>
+    <input value="" type="text" id="input1" placeholder="Enter number" required>
 
-    <p class="title">Input 2</p>
-    <input class="paragraph" value="" type="text" id="input2" placeholder="Enter review..." required>
+    <p class="title">High number</p>
+    <input class="paragraph" value="" type="text" id="input2" placeholder="Enter number" required>
 
     <button id="submit-button">Submit</button>
   </div>
