--- a/store/store.html
+++ b/store/store.html
@@ -22,7 +22,7 @@
       <h1>Your cart</h1>
       <hr>
       <div class="cart-details">
-        <p class="cart-info">Total products:<span id="total-products"></span></p>
+        <p class="cart-info">Products cost: <span id="total-products"></span></p>
         <p class="cart-info">State Tax: <span id="total-tax"></span></p>
         <p class="cart-info">Shipping: <span id="total-shipping"></span></p>
         <p class="cart-total">Grand Total: <span id="total-shipping"></span></p>
