added feature to show which product was added to the card

--- a/store/store.html
+++ b/store/store.html
@@ -21,6 +21,11 @@
     <div class="cart">
       <h1>Your cart</h1>
       <hr>
+      
+      <div id="added-product" class="added-placeholder">
+        <p class="placeholder">No products yet!</p>
+      </div>
+
       <div class="cart-details">
         <p class="cart-info">Products cost: <span id="total-products"></span></p>
         <p class="cart-info">State Tax: <span id="total-tax"></span></p>
