adding quantity update validation

--- a/store/store.html
+++ b/store/store.html
@@ -23,7 +23,7 @@
       <hr>
       
       <div id="added-product" class="added-placeholder">
-        <p class="placeholder">No products yet!</p>
+        <p class="placeholder" id="placeholder">No products yet!</p>
       </div>
 
       <div class="cart-details">
