--- a/store/store.html
+++ b/store/store.html
@@ -30,7 +30,7 @@
         <p class="cart-info">Products cost: <span id="total-products"></span></p>
         <p class="cart-info">State Tax: <span id="total-tax"></span></p>
         <p class="cart-info">Shipping: <span id="total-shipping"></span></p>
-        <p class="cart-total">Grand Total: <span id="total-shipping"></span></p>
+        <p class="cart-total">Grand Total: <span id="total-order"></span></p>
     </div>
       
       <div id="cart-products"></div>
