feature to find and remove inputted word

--- a/selectors-two/page.html
+++ b/selectors-two/page.html
@@ -11,7 +11,7 @@
     <h1>Things that need to get done.</h1>
     <ul>
       <li class="list-item">Go to the grocery store</li>
-      <li class="list-item">Order new filters for upstairs</li>
+      <li class="list-item" id="two">Order new filters for upstairs</li>
       <li class="list-item">Take the Subaru to get an oil change</li>
       <li class="list-item">Send invitations to next week's party</li>
       <li class="list-item">Figure out how to write JavaScript</li>
